--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -66,6 +66,7 @@
         <script src="{{app_context}}/javascripts/inline-attachment.js"></script>
 		<script src="{{app_context}}/javascripts/codemirror.inline-attachment.js"></script>
         <script src="{{app_context}}/javascripts/highlight.min.js"></script>
+        <script src="{{app_context}}/javascripts/loadingoverlay.min.js"></script>
         <script src="{{app_context}}/simplemde/simplemde.min.js"></script>
 		<script src="{{app_context}}/markdown-it/markdown-it.min.js"></script>
         {{#ifCond config.settings.typeahead_search '===' true}}
