--- a/public/themes/darkly/views/layouts/layout.hbs
+++ b/public/themes/darkly/views/layouts/layout.hbs
@@ -53,7 +53,7 @@
         {{/if}}
         {{/ifCond}}
 	</head>
-	<body class="{{show_footer}}">	
+	<body class="{{show_footer}}">
 		<!-- Static navbar -->
 	    <nav class="navbar navbar-default navbar-static-top">
 			<div class="container-fluid">
@@ -64,7 +64,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="{{app_context}}/"><img alt="Brand" class="img-responsive" height="110" width="110" src="/themes/darkly/images/logo.png"></a>
+					<a class="navbar-brand" href="{{app_context}}/"><img alt="Brand" class="img-responsive" height="110" width="110" src="{{app_context}}/themes/darkly/images/logo.png"></a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -106,11 +106,11 @@
 								<li><a href="{{app_context}}/suggest">Suggest</a></li>
 							{{/if}}
 							<li><a href="{{app_context}}/login">Login</a></li>
-						{{/if}}	
+						{{/if}}
 					</ul>
 				</div>
 	      </div>
-	    </nav>	
+	    </nav>
 		<div class="container-fluid">
 			{{{body}}}
 		</div>
