Fixes for when using app_context with shipped themes

--- a/public/themes/darkly/views/layouts/layout.hbs
+++ b/public/themes/darkly/views/layouts/layout.hbs
@@ -37,9 +37,9 @@
         <meta property="og:image" content="{{current_url}}/logo.png" />
         <meta property="og:url" content="{{fullUrl}}" />
         <link rel="canonical" href="{{fullUrl}}" />
-		<link rel="stylesheet" href="{{app_context}}/themes/darkly/css/darkly.min.css">
+		<link rel="stylesheet" href="/themes/darkly/css/darkly.min.css">
         <link rel="stylesheet" href="{{app_context}}/stylesheets/github.css">
-		<link rel="stylesheet" href="{{app_context}}/themes/darkly/css/style.css">
+		<link rel="stylesheet" href="/themes/darkly/css/style.css">
 		<link rel="stylesheet" href="{{app_context}}/font-awesome/css/font-awesome.min.css">
 		<script src="{{app_context}}/jquery/jquery.min.js"></script>
 		<script src="{{app_context}}/bootstrap/js/bootstrap.min.js"></script>
