--- a/public/themes/darkly/views/layouts/layout.hbs
+++ b/public/themes/darkly/views/layouts/layout.hbs
@@ -39,7 +39,7 @@
         <link rel="canonical" href="{{fullUrl}}" />
 		<link rel="stylesheet" href="/themes/darkly/css/darkly.min.css">
         <link rel="stylesheet" href="{{app_context}}/stylesheets/github.css">
-		<link rel="stylesheet" href="/themes/darkly/css/style.css"> 
+		<link rel="stylesheet" href="/themes/darkly/css/style.css">
 		<link rel="stylesheet" href="{{app_context}}/font-awesome/css/font-awesome.min.css">
 		<script src="{{app_context}}/jquery/jquery.min.js"></script>
 		<script src="{{app_context}}/bootstrap/js/bootstrap.min.js"></script>
@@ -64,7 +64,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="{{app_context}}/"><img alt="Brand" class="img-responsive" height="110" width="110" src="{{app_context}}/themes/darkly/images/logo.png"></a>
+					<a class="navbar-brand" href="{{app_context}}/"><img alt="Brand" class="img-responsive" height="110" width="110" src="/themes/darkly/images/logo.png"></a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
